[gd_scene load_steps=6 format=3 uid="uid://dvbkmbdwmsfno"]

[ext_resource type="Script" path="res://scenes/main_game/main_game.gd" id="1_n5vtr"]
[ext_resource type="PackedScene" uid="uid://bo72gujdxudso" path="res://characters/player/player.tscn" id="2_vglmg"]
[ext_resource type="PackedScene" uid="uid://eve76bmr4aav" path="res://environments/trees/pine_tree.tscn" id="3_vi0hu"]
[ext_resource type="AudioStream" uid="uid://bj1e1ev3ccet6" path="res://sounds/game_over.ogg" id="4_qp1ja"]

[sub_resource type="Curve2D" id="Curve2D_xssg3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -48, -51, 0, 0, 0, 0, 1216, -39, 0, 0, 0, 0, 1222, 711, 0, 0, 0, 0, -55, 710, 0, 0, 0, 0, -48, -51)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_n5vtr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("2_vglmg")]
position = Vector2(542, 424)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-542, -424)
curve = SubResource("Curve2D_xssg3")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-48, -51)
rotation = 0.00949339

[node name="Tree" parent="." instance=ExtResource("3_vi0hu")]
position = Vector2(225, 179)

[node name="Tree2" parent="." instance=ExtResource("3_vi0hu")]
position = Vector2(931, 323)

[node name="Tree3" parent="." instance=ExtResource("3_vi0hu")]
position = Vector2(536, 584)

[node name="MobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="GameOverScreen"]
unique_name_in_owner = true
stream = ExtResource("4_qp1ja")

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.843137)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -11.5
offset_right = 58.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "No i się zesrało"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_timer_timeout"]
